fix code issues and improve code quality