@@ -17,8 +17,9 @@ import com.bittercode.util.StoreUtil;
 
 public class RemoveBookServlet extends HttpServlet {
 
-    BookService bookService = new BookServiceImpl();
+    final BookService bookService = new BookServiceImpl();
 
+    @Override
     public void service(HttpServletRequest req, HttpServletResponse res) throws IOException, ServletException {
         PrintWriter pw = res.getWriter();
         res.setContentType("text/html");
@@ -35,8 +36,7 @@ public class RemoveBookServlet extends HttpServlet {
             rd.include(req, res);
             StoreUtil.setActiveTab(pw, "removebook");
             pw.println("<div class='container'>");
-            if (bookId == null || bookId.isBlank()) {
-                // render the remove book form;
+            if (bookId == null || bookId.trim().isEmpty()) {
                 showRemoveBookForm(pw);
                 return;
             } // else continue
